# Ipopt

Ipopt/: meson.build  meson_options.txt
Ipopt/src/Algorithm/: IpIpoptData.hpp  meson.build
Ipopt/src/Algorithm/Inexact/: IpIterativePardisoSolverInterface.cpp  meson.build
Ipopt/src/Algorithm/LinearSolvers/: meson.build
Ipopt/src/Apps/AmplSolver/: meson.build
Ipopt/src/Apps/CUTErInterface/: meson.build
Ipopt/src/Common/: config.h.meson  config_ipopt.h.meson  meson.build
Ipopt/src/Interfaces/: meson.build
Ipopt/src/LinAlg/: meson.build
Ipopt/src/LinAlg/TMatrices/: meson.build
Ipopt/src/contrib/CGPenalty/: meson.build
Ipopt/src/contrib/LinearSolverLoader/: meson.build
Ipopt/subprojects/: ASL.wrap  BLAS.wrap  LAPACK.wrap  MUMPS.wrap  coinasl.wrap  coinblas.wrap  coinlapack.wrap  coinmumps.wrap
